# archiving

./: .rattlerignore  .travis.yml  README.md  archive_goate.py  archive_goate_safe.py  archive_snakemake.py  create_archivetable.py  delete_backups.py  pyproject.toml  recipe.yaml  setup.py
.github/workflows/: publish_conda.yml
conda/: conda_upload.sh  meta.yaml
